hphp/test/slow/reified-generics/soft-reification-4.php.expectf
Fatal error: Tb is annotated to be a soft reified generic, it cannot be used until the __Soft annotation is removed in %s on line 5
